--- a/RTutorialFiles/IntroToR_6.html
+++ b/RTutorialFiles/IntroToR_6.html
@@ -1546,6 +1546,7 @@ div.tocify {
 </div>
 
 
+<p>“If” and list structures are sometimes useful, but not always necessary. If you’re short on time, you can skip this part.</p>
 <div id="recap" class="section level1">
 <h1><span class="header-section-number">1</span> Recap</h1>
 <p>In part 5, we learned about missing values:</p>
