--- a/index.html
+++ b/index.html
@@ -124,9 +124,14 @@ $(document).ready(function () {
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/HoMU1Z-pNG8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+<p>If this is your first experience of programming, code can seem like a wall of impenetrable hieroglyphs. Don't panic! After learning a few basics, you'll see that each row of code is doing one part of a larger taks, and by the end of this tutorial you'll be able to understand what each line of code is trying to do.</p>
+
 <p>Here's a demo of how I use R for research. I'm not expecting you to understand the code here, but it'll give you an idea of the way that RStudio can be used to do research:</p>
 
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ROKQywOdorE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p>Before starting, you might want to download <a href="RCheatSheet.pdf" target="_blank">this cheat sheet</a>, which summarises the functions you'll learn.</p>
 
 <p>Now you're ready to start on the introduction materials:</p>
 
