--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@ $(document).ready(function () {
 
 <p>If this is your first experience of programming, code can seem like a wall of impenetrable hieroglyphs. Don't panic! After learning a few basics, you'll see that each row of code is doing one part of a larger taks, and by the end of this tutorial you'll be able to understand what each line of code is trying to do.</p>
 
-<p>Here's a demo of how I use R for research. I'm not expecting you to understand the code here, but it'll give you an idea of the way that RStudio can be used to do research:</p>
+<p>Here's a demo of how I use R. I'm not expecting you to understand the code here, but it'll give you an idea of the way that RStudio can be used to do research. The aim is to create a script that takes some anthropological data on roof shape, plots it on a phylogeny and calculates some basic statistics. The point of using a script is that it keeps track of all the decisions we made, so if we want to change things or add data later, it's easy to re-create the plots and stats. You'll also see me stumbling into errors and looking up the help files to fix them. This is all a normal part of programming.</p>
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ROKQywOdorE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>If you're a linguist, I made a <a href="https://youtu.be/ROKQywOdorE" target="_blank">similar video but with a linguistic question here</a>.</p>
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6bLZ_odoEvc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 <p>Before starting, you might want to download <a href="RCheatSheet.pdf" target="_blank">this cheat sheet</a>, which summarises the functions you'll learn.</p>
