--- a/RTutorialFiles/IntroToR_3.html
+++ b/RTutorialFiles/IntroToR_3.html
@@ -1610,9 +1610,9 @@ secondItemByBooleanVector &lt;- myNumbers[c(FALSE,TRUE,FALSE,FALSE)]</code></pre
 <li>Find your analysis directory and click “open”</li>
 <li>RStudio will add a line of code to the console and run it.</li>
 </ul>
-<p>For me, because I’m using a mac, it’ll look something like this:</p>
+<p>For me, because I’m using a mac, it’ll look something like this (note the first character is a tilde, which indicates the current user’s home directory):</p>
 <pre class="r"><code>setwd(&quot;~/Documents/Teaching/CARDIFF/RCourse/IntroToRForAnthropologists/analysis&quot;)</code></pre>
-<p>On a windows machine, it might look something like this (note the forward slashes:</p>
+<p>On a windows machine, it might look something like this (note the forward slashes to separate directories - copying the path from Windows Explorer might give you backslashes, which need to be changed to forward slashes):</p>
 <pre class="r"><code>setwd(&quot;C:/Users/sean/Documents/R/R Course/Analysis&quot;)</code></pre>
 <p>Now copy this line of code to your script. This will mean that the first thing that your analysis script does is set the right working directory. This is important, because the working directory needs to be set each time you restart RStudio. Of course, it will only work for your specific computer, but it’s convenient for now.</p>
 <p>If it worked, you should see no complaints.</p>
@@ -1647,8 +1647,8 @@ secondItemByBooleanVector &lt;- myNumbers[c(FALSE,TRUE,FALSE,FALSE)]</code></pre
 </div>
 <div id="reading-the-data" class="section level2">
 <h2><span class="header-section-number">3.4</span> Reading the data</h2>
-<p>Now <strong>save your script</strong> to your <strong>analysis</strong> folder, named something like “part3.R”.</p>
-<p>Next, we can read in a csv file to an object called a <strong>data frame</strong>. Copy this line into your script, then run it in the console.</p>
+<p>Now <strong>save your script</strong> to your <strong>analysis</strong> folder, named something like “part3.R”. You can do this by clicking File &gt; Save As, and choosing the location like saving many other type of files.</p>
+<p>Next, we want to load the cultural data into R so we can analyse it. We can “read in” a csv file to an object called a <strong>data frame</strong>. Copy this line into your script, then run it in the console.</p>
 <pre class="r"><code>d &lt;- read.csv(&quot;../data/RoofShapeData.csv&quot;, stringsAsFactors = F)</code></pre>
 <p>To run a line from the script in the console, place the cursor on the line and press the “Run” button in the top right, or press Control + Enter (or Command + Enter on a Mac).</p>
 <p><strong>NOTE</strong>: The path is not the full location of the file, it is a <em>relative path</em>. The current working directory is inside the analysis folder, and the data we want is in the <strong>data</strong> folder, which is one step above this (<em>relative</em> to the working directory). The “../” part at the beginning of the file means “look in the folder above this one, find the folder called”data“, and inside that find the folder called”WALS_WordOrder.csv&quot;&quot;. This might seem complicated, but now this line of code will work on anyone’s computer (if they have the data). We’ve just made our code more <em>reproducible</em>!</p>
@@ -2159,7 +2159,7 @@ sum(northEastQ)</code></pre>
 </blockquote>
 <div id="using-names" class="section level3">
 <h3><span class="header-section-number">4.3.1</span> Using names</h3>
-<p>It is possible to match ata frames using rownames. However, this assumes that rom ids are unique and that there are no missing values. So this is not reccommended.</p>
+<p>It is possible to match data frames using rownames. However, this assumes that row ids are unique and that there are no missing values. So this is not reccommended.</p>
 </div>
 <div id="using-match" class="section level3">
 <h3><span class="header-section-number">4.3.2</span> Using <code>match</code></h3>
