Add note about downloading .csv files in Windws browers

--- a/RTutorialFiles/IntroToR_3.html
+++ b/RTutorialFiles/IntroToR_3.html
@@ -1596,6 +1596,9 @@ secondItemByBooleanVector &lt;- myNumbers[c(FALSE,TRUE,FALSE,FALSE)]</code></pre
 </ul>
 <p>(these files come from <a href="https://github.com/seannyD/IntroToRForAnthropology/tree/main/data">this GitHub repository</a>): <a href="https://github.com/seannyD/IntroToRForAnthropology/tree/main/data" class="uri">https://github.com/seannyD/IntroToRForAnthropology/tree/main/data</a>.</p>
 <p>Put the data files in the folder called “data”.</p>
+<blockquote>
+<p><strong>Note:</strong> If you’re using Windows, your browser may want to save these files as “.txt” files, rather than “.csv” files. That’s fine - the data won’t change - but you might get some errors when it comes to loading the files in R (because the filenames are different). To fix this, I reccommend that you: - Make Windows show file extensions in the File Explorer (see <a href="https://www.howtogeek.com/205086/beginner-how-to-make-windows-show-file-extensions/">here</a>) - Download the files as “.txt” files. - In File Explorer, find the files and rename them to end in “.csv”</p>
+</blockquote>
 <p>These files are the same kinds as you can download from D-PLACE. However, I’ve edited them slightly to make things easier for this tutorial.</p>
 </div>
 <div id="setting-the-working-directory" class="section level2 tabset tabset-fade tabset-pills">
