--- a/RTutorialFiles/IntroToR_4.html
+++ b/RTutorialFiles/IntroToR_4.html
@@ -1583,13 +1583,13 @@ d$rainfall &lt;- rainfallData[match(d$society_id, rainfallData$society_id) , ]$c
 <p>When we have a lot of data, it’s hard to view it all at once. Instead, we can use bits of programming to help us understand the range and distribution. For example, what is the mean rainfall in the data?</p>
 <p>The function <code>mean</code> takes a numeric vector and returns the mean (average). Other simple functions include <code>sd</code>, <code>max</code> and <code>min</code>:</p>
 <pre class="r"><code>mean(d$rainfall)</code></pre>
-<pre><code>## [1] NA</code></pre>
+<pre><code>## [1] 111704.8</code></pre>
 <pre class="r"><code>sd(d$rainfall)</code></pre>
-<pre><code>## [1] NA</code></pre>
+<pre><code>## [1] 69864.21</code></pre>
 <pre class="r"><code>max(d$rainfall)</code></pre>
-<pre><code>## [1] NA</code></pre>
+<pre><code>## [1] 383459.4</code></pre>
 <pre class="r"><code>min(d$rainfall)</code></pre>
-<pre><code>## [1] NA</code></pre>
+<pre><code>## [1] 2410.033</code></pre>
 <p>The values are in mean ml/m2/month (the average millileters of water falling per meter squared per month). You can see D-PLACE’s visualisation <a href="https://d-place.org/parameters/MonthlyMeanPrecipitation#1/30/152">here</a></p>
 </div>
 <div id="basic-statistics" class="section level2">
@@ -1598,15 +1598,15 @@ d$rainfall &lt;- rainfallData[match(d$society_id, rainfallData$society_id) , ]$c
 <pre class="r"><code>table(d$roofShape)</code></pre>
 <pre><code>## 
 ##              Beehive shaped                     Conical 
-##                          57                         353 
+##                          55                         350 
 ##                        Flat                 Four slopes 
-##                          95                          88 
+##                          93                          85 
 ##               Hemispherical                   One slope 
-##                         103                          15 
+##                          96                          14 
 ## Rounded or semi-cylindrical          Semi-hemispherical 
-##                          38                           8 
+##                          36                           8 
 ##                  Two slopes 
-##                         377</code></pre>
+##                         365</code></pre>
 <p>We might predict that flat rooves would be associated with lower rainfall compared to other roof types, because they are less good at draining water.</p>
 <p>To test this we first need a variable in the data frame <code>d</code> that separates flat rooves from other types.</p>
 <blockquote>
@@ -1655,7 +1655,6 @@ d$rainfall &lt;- rainfallData[match(d$society_id, rainfallData$society_id) , ]$c
 ## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 ## 
 ## Residual standard error: 67780 on 1099 degrees of freedom
-##   (32 observations deleted due to missingness)
 ## Multiple R-squared:  0.06039,    Adjusted R-squared:  0.05868 
 ## F-statistic: 35.31 on 2 and 1099 DF,  p-value: 1.367e-15</code></pre>
 <p>Add these lines to your script and run the model to see the results.</p>
